third_party/move/move-compiler-v2/tests/checking/anonymous_fields/invalid_anonymous_field1.exp

Diagnostics:
error: unexpected token
  ┌─ tests/checking/anonymous_fields/invalid_anonymous_field1.move:5:11
  │
5 │         x.0x42;
  │           ^^^^
  │           │
  │           Unexpected '0x42'
  │           Expected an identifier or an anonymous field `0`, `1`, ...
